Solve 03 , Flex aligning

--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -4,7 +4,7 @@ you'll learn about it later. */
 
 body {
   margin: 0;
-  background: #eee;
+  background: #753f3f;
   font-family: Besley, serif;
 }
 
@@ -12,6 +12,11 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 8px;
+  gap: 16px;
 }
 
 .profile-image {
@@ -27,6 +32,7 @@ body {
   font-size: 32px;
   font-weight: 900;
   font-style: italic;
+  padding-left: 5px;
 }
 
 button {
@@ -46,3 +52,12 @@ a {
 ul {
   list-style-type: none;
 }
+
+
+.links
+{
+  margin-right: auto;
+  display: flex;
+  gap: 15px;
+}
+
